# re-stream

./: .gitignore  CLAUDE.md  PLAN.md  README.md  TODOS.md  cams.json
cv/: README.md  pyproject.toml
cv/scripts/: annotate_detections.py  define_roi.py  record_clip.sh  roi.py  spike_measure.py
docs/: DESIGN.md  STATE.md
mediamtx/: .env.example  README.md  add_cam.py  docker-compose.yml
